fixed some bugs

--- a/public/style.css
+++ b/public/style.css
@@ -12,3 +12,10 @@ main {
 .page-title {
   cursor: pointer;
 }
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: baseline;
+}
